<resources>
    <string name="app_name">Lista Tareas</string>
    <string name="btn_volver">VOLVER</string>
    <string name="btn_cancelar">CANCELAR</string>
    <string name="btn_guardar">GUARDAR</string>
    <string name="btn_editar">EDITAR</string>
    <string name="acc_info">INFORMACIÓN TAREA</string>
    <string name="acc_editar">EDITAR TAREA</string>
    <string name="acc_nuevo">NUEVA TAREA</string>
    <string name="acc_borrar">Borrando…</string>
    <string name="acc_deshacer">DESHACER</string>
    <string name="hint_nombre_tarea">Nombre tarea</string>
    <string name="hint_fecha">dd/mm/yyyy</string>
    <string name="hint_hora">hh:mm</string>
    <string name="hint_descripcion">Descripción</string>
    <string name="categoria">Categoría:</string>
    <string name="cat_0">Ocio</string>
    <string name="cat_1">Deporte</string>
    <string name="cat_2">Trabajo</string>
    <string name="cat_3">Estudios</string>
    <string name="cat_4">Familia</string>
    <string name="cat_5">Amigos</string>
    <string name="mnuNuevo">Nueva</string>
    <string name="mnuOrdenar">Ordenar</string>
    <string name="mnuOrdenarCategoria">Por categoría</string>
    <string name="mnuOrdenarFecha">Por fecha</string>
    <string name="mnuSalir">Salir</string>
    <string name="ad_salir_tit">Salir</string>
    <string name="ad_salir_msg">¿Desea salir de la app?</string>
    <string name="ad_salir_no">No</string>
    <string name="ad_salir_si">Sí</string>
    <string name="mnuEditar">Editar</string>
    <string name="mnuInfo">Información</string>
    <string name="mnuBorrar">Borrar</string>
    <string name="ad_confirmBorrado_tit">BORRAR TAREA</string>
    <string name="ad_confirmBorrado_msg">¿Desea borrar la tarea?</string>
    <string name="ad_confirmBorrado_no">No</string>
    <string name="ad_confirmBorrado_si">Sí</string>
</resources>